# bbs-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .env.example  Dockerfile  Makefile  README.md  index_metadata.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: chat.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  graph.py  res.py
backend/app/rag/: chain.py  graph_traversal.py  graphrag_chain.py  loader.py  retriever.py  schemas.py
backend/app/sync/: __init__.py  pipeline.py
backend/docs/: INDEX_UPDATE.md
backend/docstore/: 0000b296-9957-485d-a438-05aef6af4172  000164db-d771-4c92-8382-3542c79ca2fb  0001e340-f24e-4afa-a31c-e39341311b44  0002fc96-e2a4-4049-a184-c7e89ec22ef1  00047d64-b7ae-4df1-bc01-b9129aa7c974  0004f334-c4cf-480a-8997-2b56c2a3b85c  0005a9a4-67d2-4310-b5e7-4ade4906c92d  00079639-e980-464f-9a18-29a4cc3b1e28  00082ef5-4aea-4c46-8026-366ad177d5b4  0008acd2-f7c3-43e7-bf02-455c915b2042  00090887-c218-488f-9a8b-dac1308ce597  000c8066-a803-44c6-91f2-3c451e122afe  000ceaa7-b59e-43a6-888a-468a42ff4798  000cef4e-93d5-4480-9413-8593fcad2f8e  000f88d8-e900-47bd-ba7c-ce2718b6a5c7  0010b4a8-0534-4a4a-99da-6c465aa4cecb  0012bed3-8fb5-434c-9964-192e1a127199  0012f30e-5599-4d34-b4c8-b283663e054e  0015c19c-72fc-431a-9723-959f92c5a7bc  0016cb55-9b16-407c-9b60-be3d3c45fadc  0016cfc4-a2f0-4005-b219-d340ee2bbf6b  0018d14f-1b66-450d-be2e-551aa141f32d  001a307e-7a00-42f8-b62b-094f0c9577d6  001ad0aa-a7de-45e2-8eb1-c974a6ac63d0  001b64df-59f6-48ee-9bfa-b8c3e4d84f62  001c7f4a-ff7a-4a03-9a10-ebfe4c9a5f38  001cd18d-731a-4a98-8fa1-426895d8425d  001cfcc5-0ba9-4549-bfd2-488d157c934f  001d0f49-af27-43e6-a35b-ea5bb275a311  00208912-907b-4c1c-a90c-07efe46d6215  00208974-4a28-4ae8-845b-53669aa6940d  00213270-a020-417f-83ef-8c3f563b41db  00219d10-2102-4408-8b9c-fec19dda4369  0022a329-81c2-4a24-b408-44dd9c12fa5a  0022c4f5-70e2-4a40-8498-f35bc439a127  0023104b-8fa3-4d0d-a78e-c946807170a8  00277f63-9ff1-4176-912b-e9d02c9e5817  00296d12-9314-4728-a3de-627496c93172  00297671-e4d7-486f-807f-b74afda0e6b5  002a0558-413a-4c13-a588-a7f453e42e0f  (+59857 more)
backend/scripts/: check_db_indexes.py  create_graphrag_index.py  create_index.py  init_rag_db.py  sync_data.py  update_index.py
backend/tests/: __init__.py  test_api.py  test_main.py
docs/: DESIGN.md
frontend/: Dockerfile  index.html  openapi-generator-config.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  InputForm.tsx  Message.tsx
